Обновление Введения и Практической части

--- a/code/fab.ipynb
+++ b/code/fab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "efca849a",
    "metadata": {},
    "outputs": [],
@@ -998,11 +998,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "84e68621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fabpy import Values, Formula"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "c4faceaf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "_U_a = [i for i in range(60, 180+1, 10)]\n",
+    "_I_a = [0.12, 0.34, 0.72, 1.26, 1.95, 2.77, 3.72, 4.75, 5.93, 7.15, 8.44, 9.84, 11.27]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c151f26b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13, 13)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_U_a = []\n",
+    "list_I_a = []\n",
+    "\n",
+    "for u in _U_a:\n",
+    "    list_U_a.append(Values(\n",
+    "        name='U_a',\n",
+    "        values=u,\n",
+    "        \n",
+    "    ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7f7f851",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_U_a = [i for i in range(60, 180+1, 10)]\n",
+    "_I_a = [0.12, 0.34, 0.72, 1.26, 1.95, 2.77, 3.72, 4.75, 5.93, 7.15, 8.44, 9.84, 11.27]\n",
+    "\n",
+    "list_U_a = "
+   ]
   }
  ],
  "metadata": {
