--- a/source/appendix.tex
+++ b/source/appendix.tex
@@ -1,20 +1,21 @@
 \section{Приложение}
+{\footnotesize\setlength\belowdisplayskip{-3pt}
 
 \appendixsection{Вычисление величины крутизны $S$} \label{app:1}
-{\small 
-\[ S_1 = \frac{I_{a_{2}} - I_{a_{1}}}{U_{a_{2}} - U_{a_{1}}} = \frac{10,16 \, \text{мА} - 3,78 \, \text{мА}}{4 \, \text{В} - 2 \, \text{В}} =\\= 3,19 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
-\[ S_2 = \frac{I_{a_{3}} - I_{a_{2}}}{U_{a_{3}} - U_{a_{2}}} = \frac{16,88 \, \text{мА} - 10,16 \, \text{мА}}{6 \, \text{В} - 4 \, \text{В}} = 3,36 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
-\[ S_3 = \frac{I_{a_{4}} - I_{a_{3}}}{U_{a_{4}} - U_{a_{3}}} = \frac{24,84 \, \text{мА} - 16,88 \, \text{мА}}{8 \, \text{В} - 6 \, \text{В}} = 3,98 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
-\[ S_4 = \frac{I_{a_{5}}- I_{a_{4}}}{U_{a_{5}} - U_{a_{4}}} = \frac{32,4 \, \text{мА} - 24,84 \, \text{мА}}{10 \, \text{В} - 8 \, \text{В}} = 3,78 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
-\[ S_5 = \frac{I_{a_{6}}- I_{a_{5}}}{U_{a_{6}} - U_{a_{5}} } = \frac{40,9 \, \text{мА} - 32,4 \, \text{мА}}{12 \, \text{В} - 10 \, \text{В}} = 4,25 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
-\[ S_6 = \frac{I_{a_{7}} - I_{a_{6}}}{U_{a_{7}} - U_{a_{6}}} = \frac{49,94 \, \text{мА} - 40,9 \, \text{мА}}{14 \, \text{В} - 12 \, \text{В}} = 4,52 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
-\[ S_7 = \frac{I_{a_{8}} - I_{a_{7}}}{U_{a_{8}} - U_{a_{7}}} = \frac{62,4 \, \text{мА} - 49,94 \, \text{мА}}{16 \, \text{В} - 14 \, \text{В}} = 6,23 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
-\[ S_8 = \frac{I_{a_{9}} - I_{a_{8}}}{U_{a_{9}} - U_{a_{8}}} = \frac{73,52 \, \text{мА} - 62,4 \, \text{мА}}{18 \, \text{В} - 16 \, \text{В}} = 5,56 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
-\[ S_9 = \frac{I_{a_{10}} - I_{a_{9}}}{U_{a_{10}} - U_{a_{9}}} = \frac{86,31 \, \text{мА} - 73,52 \, \text{мА}}{20 \, \text{В} - 18 \, \text{В}} = 6,40 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
-}
+\begin{multicols}{2}
+	\noindent
+	\[ S_1 = \frac{I_{a_{2}} - I_{a_{1}}}{U_{a_{2}} - U_{a_{1}}} = \frac{10,16 \, \text{мА} - 3,78 \, \text{мА}}{4 \, \text{В} - 2 \, \text{В}} =\\= 3,19 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+	\[ S_2 = \frac{I_{a_{3}} - I_{a_{2}}}{U_{a_{3}} - U_{a_{2}}} = \frac{16,88 \, \text{мА} - 10,16 \, \text{мА}}{6 \, \text{В} - 4 \, \text{В}} = 3,36 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+	\[ S_3 = \frac{I_{a_{4}} - I_{a_{3}}}{U_{a_{4}} - U_{a_{3}}} = \frac{24,84 \, \text{мА} - 16,88 \, \text{мА}}{8 \, \text{В} - 6 \, \text{В}} = 3,98 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+	\[ S_4 = \frac{I_{a_{5}}- I_{a_{4}}}{U_{a_{5}} - U_{a_{4}}} = \frac{32,4 \, \text{мА} - 24,84 \, \text{мА}}{10 \, \text{В} - 8 \, \text{В}} = 3,78 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+	\[ S_5 = \frac{I_{a_{6}}- I_{a_{5}}}{U_{a_{6}} - U_{a_{5}} } = \frac{40,9 \, \text{мА} - 32,4 \, \text{мА}}{12 \, \text{В} - 10 \, \text{В}} = 4,25 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+	\[ S_6 = \frac{I_{a_{7}} - I_{a_{6}}}{U_{a_{7}} - U_{a_{6}}} = \frac{49,94 \, \text{мА} - 40,9 \, \text{мА}}{14 \, \text{В} - 12 \, \text{В}} = 4,52 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+	\[ S_7 = \frac{I_{a_{8}} - I_{a_{7}}}{U_{a_{8}} - U_{a_{7}}} = \frac{62,4 \, \text{мА} - 49,94 \, \text{мА}}{16 \, \text{В} - 14 \, \text{В}} = 6,23 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+	\[ S_8 = \frac{I_{a_{9}} - I_{a_{8}}}{U_{a_{9}} - U_{a_{8}}} = \frac{73,52 \, \text{мА} - 62,4 \, \text{мА}}{18 \, \text{В} - 16 \, \text{В}} = 5,56 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+	\[ S_9 = \frac{I_{a_{10}} - I_{a_{9}}}{U_{a_{10}} - U_{a_{9}}} = \frac{86,31 \, \text{мА} - 73,52 \, \text{мА}}{20 \, \text{В} - 18 \, \text{В}} = 6,40 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+\end{multicols}
 
 \appendixsection{Вычисление погрешности постоянного тока $I_a$} \label{app:2}
-{\small
 \[ \Delta I_{\text{пр}_{ 1 }} = 0,002 I_{a_{1}} + 0,02 = 0,002 \times 3,78 \, \text{мА} + 0,02 = 0,03 \, \mathrm{ \text{мА} } \]
 \[ \Delta I_{\text{пр}_{ 2 }} = 0,002 I_{a_{2}} + 0,02 = 0,002 \times 10,16 \, \text{мА} + 0,02 = 0,04 \, \mathrm{ \text{мА} } \]
 \[ \Delta I_{\text{пр}_{ 3 }} = 0,002 I_{a_{3}} + 0,02 = 0,002 \times 16,88 \, \text{мА} + 0,02 = 0,05 \, \mathrm{ \text{мА} } \]
@@ -25,10 +26,8 @@
 \[ \Delta I_{\text{пр}_{ 8 }} = 0,002 I_{a_{8}} + 0,02 = 0,002 \times 62,4 \, \text{мА} + 0,02 = 0,14 \, \mathrm{ \text{мА} } \]
 \[ \Delta I_{\text{пр}_{ 9 }} = 0,002 I_{a_{9}} + 0,02 = 0,002 \times 73,52 \, \text{мА} + 0,02 = 0,17 \, \mathrm{ \text{мА} } \]
 \[ \Delta I_{\text{пр}_{ 10 }} = 0,002 I_{a_{10}} + 0,02 = 0,002 \times 86,31 \, \text{мА} + 0,02 = 0,19 \, \mathrm{ \text{мА} } \]
-}
 
 \appendixsection{Вычисление погрешности  напряжения $U_a$} \label{app:3}
-{\small
 \[ \Delta U_{\text{пр}_{ 1 }} = 0,005 U_{a_{1}} + 0,299 = 0,005 \times 2 \, \text{В} + 0,299 = 0,31 \, \mathrm{ \text{В} } \]
 \[ \Delta U_{\text{пр}_{ 2 }} = 0,005 U_{a_{2}} + 0,299 = 0,005 \times 4 \, \text{В} + 0,299 = 0,32 \, \mathrm{ \text{В} } \]
 \[ \Delta U_{\text{пр}_{ 3 }} = 0,005 U_{a_{3}} + 0,299 = 0,005 \times 6 \, \text{В} + 0,299 = 0,33 \, \mathrm{ \text{В} } \]
@@ -39,11 +38,8 @@
 \[ \Delta U_{\text{пр}_{ 8 }} = 0,005 U_{a_{8}} + 0,299 = 0,005 \times 16 \, \text{В} + 0,299 = 0,38 \, \mathrm{ \text{В} } \]
 \[ \Delta U_{\text{пр}_{ 9 }} = 0,005 U_{a_{9}} + 0,299 = 0,005 \times 18 \, \text{В} + 0,299 = 0,39 \, \mathrm{ \text{В} } \]
 \[ \Delta U_{\text{пр}_{ 10 }} = 0,005 U_{a_{10}} + 0,299 = 0,005 \times 20 \, \text{В} + 0,299 = 0,40 \, \mathrm{ \text{В} } \]
-}
 
 \appendixsection{Вычисление консвенной погрешности $S$} \label{app:4}
-{\small
-\setlength\belowdisplayskip{-3pt}
 \begin{multline*}
 	\Delta S_1 = \tfrac{\sqrt{\left(I_{a_{2}} - I_{a_{1}}\right)^{2} \left(\Delta U_{a_{1}}^{2} + \Delta U_{a_{2}}^{2}\right) + \left(U_{a_{2}} - U_{a_{1}}\right)^{2} \left(\Delta I_{a_{1}}^{2} + \Delta I_{a_{2}}^{2}\right)}}{\left(U_{a_{2}} - U_{a_{1}}\right)^{2}} = \\ =
 	\tfrac{\sqrt{\left(0,03  \text{мА}^{2} + 0,04  \text{мА}^{2}\right)   \left(4,0  \text{В} - 2,0  \text{В}\right)^{2} + \left(0,31  \text{В}^{2} + 0,32  \text{В}^{2}\right)   \left(10,16  \text{мА} - 3,78  \text{мА}\right)^{2}}}{\left(4,0  \text{В} - 2,0  \text{В}\right)^{2}} = 0,71  \mathrm{ \frac{\text{мА}}{\text{В}} }
@@ -80,39 +76,35 @@
 	\Delta S_9 = \tfrac{\sqrt{\left(I_{a_{10}} - I_{a_{9}}\right)^{2} \left(\Delta U_{a_{10}}^{2} + \Delta U_{a_{9}}^{2}\right) + \left(U_{a_{10}} - U_{a_{9}}\right)^{2} \left(\Delta I_{a_{10}}^{2} + \Delta I_{a_{9}}^{2}\right)}}{\left(U_{a_{10}} - U_{a_{9}}\right)^{2}} = \\=
 	\tfrac{\sqrt{\left(0,17  \text{мА}^{2} + 0,19  \text{мА}^{2}\right)   \left(20,0  \text{В} - 18,0  \text{В}\right)^{2} + \left(0,39  \text{В}^{2} + 0,4  \text{В}^{2}\right)   \left(86,31  \text{мА} - 73,52  \text{мА}\right)^{2}}}{\left(20,0  \text{В} - 18,0  \text{В}\right)^{2}} = 1,79  \mathrm{ \frac{\text{мА}}{\text{В}} }
 \end{multline*}
-}
 
 \appendixsection{Вычисление параметра B} \label{app:5}
 \begin{multline*}
-	B = \tfrac{I_{a_{1}} U_{a_{1}}^{1.5} + ... + I_{a_{10}} U_{a_{10}}^{1.5}}{U_{a_{1}}^{3} + ... + U_{a_{10}}^{3}} =\\= \tfrac{10,2~\mathrm{\text{мА}} \cdot \left(4~\mathrm{\text{В}}\right)^{1,5} + 16,9~\mathrm{\text{мА}} \cdot \left(6~\mathrm{\text{В}}\right)^{1,5} + 24,8~\mathrm{\text{мА}} \cdot \left(8~\mathrm{\text{В}}\right)^{1,5} + 3,8~\mathrm{\text{мА}} \cdot \left(2~\mathrm{\text{В}}\right)^{1,5} + 32,4~\mathrm{\text{мА}} \cdot \left(10~\mathrm{\text{В}}\right)^{1,5}}{\left(10~\mathrm{\text{В}}\right)^{3} + \left(12~\mathrm{\text{В}}\right)^{3} + \left(14~\mathrm{\text{В}}\right)^{3} + \left(16~\mathrm{\text{В}}\right)^{3} + \left(18~\mathrm{\text{В}}\right)^{3} + \left(20~\mathrm{\text{В}}\right)^{3} + \left(2~\mathrm{\text{В}}\right)^{3} + \left(4~\mathrm{\text{В}}\right)^{3} + \left(6~\mathrm{\text{В}}\right)^{3} + \left(8~\mathrm{\text{В}}\right)^{3}} + \\ + \tfrac{ 40,9~\mathrm{\text{мА}} \cdot \left(12~\mathrm{\text{В}}\right)^{1,5} + 49,9~\mathrm{\text{мА}} \cdot \left(14~\mathrm{\text{В}}\right)^{1,5} + 62,4~\mathrm{\text{мА}} \cdot \left(16~\mathrm{\text{В}}\right)^{1,5} + 73,5~\mathrm{\text{мА}} \cdot \left(18~\mathrm{\text{В}}\right)^{1,5}  + 86,3~\mathrm{\text{мА}} \cdot \left(20~\mathrm{\text{В}}\right)^{1,5}}{\left(10~\mathrm{\text{В}}\right)^{3} + \left(12~\mathrm{\text{В}}\right)^{3} + \left(14~\mathrm{\text{В}}\right)^{3} + \left(16~\mathrm{\text{В}}\right)^{3} + \left(18~\mathrm{\text{В}}\right)^{3} + \left(20~\mathrm{\text{В}}\right)^{3} + \left(2~\mathrm{\text{В}}\right)^{3} + \left(4~\mathrm{\text{В}}\right)^{3} + \left(6~\mathrm{\text{В}}\right)^{3} + \left(8~\mathrm{\text{В}}\right)^{3}} =\\= 0,97~\mathrm{\tfrac{\text{мА}}{\text{В}^{3/2}}} 
+	B = \tfrac{I_{a_{1}} U_{a_{1}}^{1.5} + ... + I_{a_{10}} U_{a_{10}}^{1.5}}{U_{a_{1}}^{3} + ... + U_{a_{10}}^{3}} = \tfrac{10,2~\mathrm{\text{мА}} \cdot \left(4~\mathrm{\text{В}}\right)^{1,5} + 16,9~\mathrm{\text{мА}} \cdot \left(6~\mathrm{\text{В}}\right)^{1,5} + 24,8~\mathrm{\text{мА}} \cdot \left(8~\mathrm{\text{В}}\right)^{1,5} + 3,8~\mathrm{\text{мА}} \cdot \left(2~\mathrm{\text{В}}\right)^{1,5} + 32,4~\mathrm{\text{мА}} \cdot \left(10~\mathrm{\text{В}}\right)^{1,5}}{\left(10~\mathrm{\text{В}}\right)^{3} + \left(12~\mathrm{\text{В}}\right)^{3} + \left(14~\mathrm{\text{В}}\right)^{3} + \left(16~\mathrm{\text{В}}\right)^{3} + \left(18~\mathrm{\text{В}}\right)^{3} + \left(20~\mathrm{\text{В}}\right)^{3} + \left(2~\mathrm{\text{В}}\right)^{3} + \left(4~\mathrm{\text{В}}\right)^{3} + \left(6~\mathrm{\text{В}}\right)^{3} + \left(8~\mathrm{\text{В}}\right)^{3}} + \\ + \tfrac{ 40,9~\mathrm{\text{мА}} \cdot \left(12~\mathrm{\text{В}}\right)^{1,5} + 49,9~\mathrm{\text{мА}} \cdot \left(14~\mathrm{\text{В}}\right)^{1,5} + 62,4~\mathrm{\text{мА}} \cdot \left(16~\mathrm{\text{В}}\right)^{1,5} + 73,5~\mathrm{\text{мА}} \cdot \left(18~\mathrm{\text{В}}\right)^{1,5}  + 86,3~\mathrm{\text{мА}} \cdot \left(20~\mathrm{\text{В}}\right)^{1,5}}{\left(10~\mathrm{\text{В}}\right)^{3} + \left(12~\mathrm{\text{В}}\right)^{3} + \left(14~\mathrm{\text{В}}\right)^{3} + \left(16~\mathrm{\text{В}}\right)^{3} + \left(18~\mathrm{\text{В}}\right)^{3} + \left(20~\mathrm{\text{В}}\right)^{3} + \left(2~\mathrm{\text{В}}\right)^{3} + \left(4~\mathrm{\text{В}}\right)^{3} + \left(6~\mathrm{\text{В}}\right)^{3} + \left(8~\mathrm{\text{В}}\right)^{3}} = 0,97~\mathrm{\tfrac{\text{мА}}{\text{В}^{3/2}}} 
 \end{multline*}
+
 \appendixsection{Вычисление коэффициента усиления $K$} \label{app:6}
-{\small
-	\begin{multicols}{3}
-		\noindent
-		\[ K_{1} = \tfrac{2U_\text{вых\,0}}{2U_\text{вх}} = \tfrac{0,36 \, \text{В}}{0,2 \, \text{В}} = 1,80 \, \mathrm{  } \]
-		\[ K_{2} = \tfrac{2U_\text{вых\,1}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
-		\[ K_{3} = \tfrac{2U_\text{вых\,2}}{2U_\text{вх}} = \tfrac{0,356 \, \text{В}}{0,2 \, \text{В}} = 1,78 \, \mathrm{  } \]
-		\[ K_{4} = \tfrac{2U_\text{вых\,3}}{2U_\text{вх}} = \tfrac{0,348 \, \text{В}}{0,2 \, \text{В}} = 1,74 \, \mathrm{  } \]
-		\[ K_{5} = \tfrac{2U_\text{вых\,4}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
-		\[ K_{6} = \tfrac{2U_\text{вых\,5}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
-		\[ K_{7} = \tfrac{2U_\text{вых\,6}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
-		\[ K_{8} = \tfrac{2U_\text{вых\,7}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
-		\[ K_{9} = \tfrac{2U_\text{вых\,8}}{2U_\text{вх}} = \tfrac{0,344 \, \text{В}}{0,2 \, \text{В}} = 1,72 \, \mathrm{  } \]
-		\[ K_{10} = \tfrac{2U_\text{вых\,9}}{2U_\text{вх}} = \tfrac{0,344 \, \text{В}}{0,2 \, \text{В}} = 1,72 \, \mathrm{  } \]
-		\[ K_{11} = \tfrac{2U_\text{вых\,10}}{2U_\text{вх}} = \tfrac{0,336 \, \text{В}}{0,2 \, \text{В}} = 1,68 \, \mathrm{  } \]
-		\[ K_{12} = \tfrac{2U_\text{вых\,11}}{2U_\text{вх}} = \tfrac{0,308 \, \text{В}}{0,2 \, \text{В}} = 1,54 \, \mathrm{  } \]
-		\[ K_{13} = \tfrac{2U_\text{вых\,12}}{2U_\text{вх}} = \tfrac{0,288 \, \text{В}}{0,2 \, \text{В}} = 1,44 \, \mathrm{  } \]
-		\[ K_{14} = \tfrac{2U_\text{вых\,13}}{2U_\text{вх}} = \tfrac{0,272 \, \text{В}}{0,2 \, \text{В}} = 1,36 \, \mathrm{  } \]
-		\[ K_{15} = \tfrac{2U_\text{вых\,14}}{2U_\text{вх}} = \tfrac{0,254 \, \text{В}}{0,2 \, \text{В}} = 1,27 \, \mathrm{  } \]
-		\[ K_{16} = \tfrac{2U_\text{вых\,15}}{2U_\text{вх}} = \tfrac{0,24 \, \text{В}}{0,2 \, \text{В}} = 1,20 \, \mathrm{  } \]
-	\end{multicols}
-}
+\begin{multicols}{3}
+	\noindent
+	\[ K_{1} = \tfrac{2U_\text{вых\,0}}{2U_\text{вх}} = \tfrac{0,36 \, \text{В}}{0,2 \, \text{В}} = 1,80 \, \mathrm{  } \]
+	\[ K_{2} = \tfrac{2U_\text{вых\,1}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
+	\[ K_{3} = \tfrac{2U_\text{вых\,2}}{2U_\text{вх}} = \tfrac{0,356 \, \text{В}}{0,2 \, \text{В}} = 1,78 \, \mathrm{  } \]
+	\[ K_{4} = \tfrac{2U_\text{вых\,3}}{2U_\text{вх}} = \tfrac{0,348 \, \text{В}}{0,2 \, \text{В}} = 1,74 \, \mathrm{  } \]
+	\[ K_{5} = \tfrac{2U_\text{вых\,4}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
+	\[ K_{6} = \tfrac{2U_\text{вых\,5}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
+	\[ K_{7} = \tfrac{2U_\text{вых\,6}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
+	\[ K_{8} = \tfrac{2U_\text{вых\,7}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
+	\[ K_{9} = \tfrac{2U_\text{вых\,8}}{2U_\text{вх}} = \tfrac{0,344 \, \text{В}}{0,2 \, \text{В}} = 1,72 \, \mathrm{  } \]
+	\[ K_{10} = \tfrac{2U_\text{вых\,9}}{2U_\text{вх}} = \tfrac{0,344 \, \text{В}}{0,2 \, \text{В}} = 1,72 \, \mathrm{  } \]
+	\[ K_{11} = \tfrac{2U_\text{вых\,10}}{2U_\text{вх}} = \tfrac{0,336 \, \text{В}}{0,2 \, \text{В}} = 1,68 \, \mathrm{  } \]
+	\[ K_{12} = \tfrac{2U_\text{вых\,11}}{2U_\text{вх}} = \tfrac{0,308 \, \text{В}}{0,2 \, \text{В}} = 1,54 \, \mathrm{  } \]
+	\[ K_{13} = \tfrac{2U_\text{вых\,12}}{2U_\text{вх}} = \tfrac{0,288 \, \text{В}}{0,2 \, \text{В}} = 1,44 \, \mathrm{  } \]
+	\[ K_{14} = \tfrac{2U_\text{вых\,13}}{2U_\text{вх}} = \tfrac{0,272 \, \text{В}}{0,2 \, \text{В}} = 1,36 \, \mathrm{  } \]
+	\[ K_{15} = \tfrac{2U_\text{вых\,14}}{2U_\text{вх}} = \tfrac{0,254 \, \text{В}}{0,2 \, \text{В}} = 1,27 \, \mathrm{  } \]
+	\[ K_{16} = \tfrac{2U_\text{вых\,15}}{2U_\text{вх}} = \tfrac{0,24 \, \text{В}}{0,2 \, \text{В}} = 1,20 \, \mathrm{  } \]
+\end{multicols}
 
 \appendixsection{Вычисление приборной погрешности сигнала} \label{app:7}
-{\small
-\setlength\belowdisplayskip{0pt}
-\begin{multicols}{2}
+\begin{multicols}{3}
 	\noindent
 	\begin{multline*} \Delta \nu_{1} = k_\text{пр 1} \left(\tfrac{\nu_\text{уст 1}}{50} + \tfrac{3}{10}\right) =\\= 10^2  \left(\tfrac{10 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 0,1 \, \mathrm{ \text{кГц} } \end{multline*}
 	\begin{multline*} \Delta \nu_{2} = k_\text{пр 2} \left(\tfrac{\nu_\text{уст 2}}{50} + \tfrac{3}{10}\right) =\\= 10^3  \left(\tfrac{20 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 0,7 \, \mathrm{ \text{кГц} } \end{multline*}
@@ -130,5 +122,91 @@
 	\begin{multline*} \Delta \nu_{14} = k_\text{пр 14} \left(\tfrac{\nu_\text{уст 14}}{50} + \tfrac{3}{10}\right) =\\= 10^4   \left(\tfrac{70 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 17,0 \, \mathrm{ \text{кГц} } \end{multline*}
 	\begin{multline*} \Delta \nu_{15} = k_\text{пр 15} \left(\tfrac{\nu_\text{уст 15}}{50} + \tfrac{3}{10}\right) =\\= 10^4   \left(\tfrac{80 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 19,0 \, \mathrm{ \text{кГц} } \end{multline*}
 	\begin{multline*} \Delta \nu_{16} = k_\text{пр 16} \left(\tfrac{\nu_\text{уст 16}}{50} + \tfrac{3}{10}\right) =\\= 10^4  \left(\tfrac{90 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 21,0 \, \mathrm{ \text{кГц} } \end{multline*}
+\end{multicols}
+
+\appendixsection{Вычисление погрешности анодного напряжения при измерении анодной характеристики триода} \label{app:8}
+\begin{multicols}{2}
+	\noindent
+	\[ \Delta U_{a_{ 1 }} = 0.005 U_{a_{ 1 }} + 0.299 = 0,005 \times 10~\mathrm{\text{В}} + 0,299 = 0,3~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 2 }} = 0.005 U_{a_{ 2 }} + 0.299 = 0,005 \times 20~\mathrm{\text{В}} + 0,299 = 0,4~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 3 }} = 0.005 U_{a_{ 3 }} + 0.299 = 0,005 \times 30~\mathrm{\text{В}} + 0,299 = 0,4~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 4 }} = 0.005 U_{a_{ 4 }} + 0.299 = 0,005 \times 40~\mathrm{\text{В}} + 0,299 = 0,5~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 5 }} = 0.005 U_{a_{ 5 }} + 0.299 = 0,005 \times 50~\mathrm{\text{В}} + 0,299 = 0,5~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 6 }} = 0.005 U_{a_{ 6 }} + 0.299 = 0,005 \times 60~\mathrm{\text{В}} + 0,299 = 0,6~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 7 }} = 0.005 U_{a_{ 7 }} + 0.299 = 0,005 \times 70~\mathrm{\text{В}} + 0,299 = 0,6~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 8 }} = 0.005 U_{a_{ 8 }} + 0.299 = 0,005 \times 80~\mathrm{\text{В}} + 0,299 = 0,7~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 9 }} = 0.005 U_{a_{ 9 }} + 0.299 = 0,005 \times 90~\mathrm{\text{В}} + 0,299 = 0,7~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 10 }} = 0.005 U_{a_{ 10 }} + 0.299 = 0,005 \times 100~\mathrm{\text{В}} + 0,299 = 0,8~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 11 }} = 0.005 U_{a_{ 11 }} + 0.299 = 0,005 \times 110~\mathrm{\text{В}} + 0,299 = 0,8~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 12 }} = 0.005 U_{a_{ 12 }} + 0.299 = 0,005 \times 120~\mathrm{\text{В}} + 0,299 = 0,9~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 13 }} = 0.005 U_{a_{ 13 }} + 0.299 = 0,005 \times 130~\mathrm{\text{В}} + 0,299 = 0,9~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 14 }} = 0.005 U_{a_{ 14 }} + 0.299 = 0,005 \times 140~\mathrm{\text{В}} + 0,299 = 1,0~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 15 }} = 0.005 U_{a_{ 15 }} + 0.299 = 0,005 \times 150~\mathrm{\text{В}} + 0,299 = 1,0~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 16 }} = 0.005 U_{a_{ 16 }} + 0.299 = 0,005 \times 160~\mathrm{\text{В}} + 0,299 = 1,1~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 17 }} = 0.005 U_{a_{ 17 }} + 0.299 = 0,005 \times 170~\mathrm{\text{В}} + 0,299 = 1,1~\mathrm{\text{В}} \]
+	\[ \Delta U_{a_{ 18 }} = 0.005 U_{a_{ 18 }} + 0.299 = 0,005 \times 180~\mathrm{\text{В}} + 0,299 = 1,2~\mathrm{\text{В}} \]
+\end{multicols}
+
+\appendixsection{Вычисление погрешности анодного тока при измерении анодной характеристики триода} \label{app:9}
+\begin{multicols}{2}
+	\noindent
+	\[ \Delta I^{-4\text{В}}_{a\ 1} = 0.002 I^{-4\text{В}}_{a\ 1} + 0.02 = 0,002 \times 0,12~\mathrm{\text{мА}} + 0,02 = 0,02~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 2} = 0.002 I^{-4\text{В}}_{a\ 2} + 0.02 = 0,002 \times 0,34~\mathrm{\text{мА}} + 0,02 = 0,02~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 3} = 0.002 I^{-4\text{В}}_{a\ 3} + 0.02 = 0,002 \times 0,72~\mathrm{\text{мА}} + 0,02 = 0,02~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 4} = 0.002 I^{-4\text{В}}_{a\ 4} + 0.02 = 0,002 \times 1,26~\mathrm{\text{мА}} + 0,02 = 0,02~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 5} = 0.002 I^{-4\text{В}}_{a\ 5} + 0.02 = 0,002 \times 1,95~\mathrm{\text{мА}} + 0,02 = 0,02~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 6} = 0.002 I^{-4\text{В}}_{a\ 6} + 0.02 = 0,002 \times 2,77~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 7} = 0.002 I^{-4\text{В}}_{a\ 7} + 0.02 = 0,002 \times 3,72~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 8} = 0.002 I^{-4\text{В}}_{a\ 8} + 0.02 = 0,002 \times 4,75~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 9} = 0.002 I^{-4\text{В}}_{a\ 9} + 0.02 = 0,002 \times 5,93~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 10} = 0.002 I^{-4\text{В}}_{a\ 10} + 0.02 = 0,002 \times 7,15~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 11} = 0.002 I^{-4\text{В}}_{a\ 11} + 0.02 = 0,002 \times 8,44~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 12} = 0.002 I^{-4\text{В}}_{a\ 12} + 0.02 = 0,002 \times 9,84~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-4\text{В}}_{a\ 13} = 0.002 I^{-4\text{В}}_{a\ 13} + 0.02 = 0,002 \times 11,27~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+\end{multicols}
+\begin{multicols}{2}
+	\noindent
+	\[ \Delta I^{-2\text{В}}_{a\ 1} = 0.002 I^{-2\text{В}}_{a\ 1} + 0.02 = 0,002 \times 0,16~\mathrm{\text{мА}} + 0,02 = 0,02~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-2\text{В}}_{a\ 2} = 0.002 I^{-2\text{В}}_{a\ 2} + 0.02 = 0,002 \times 0,54~\mathrm{\text{мА}} + 0,02 = 0,02~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-2\text{В}}_{a\ 3} = 0.002 I^{-2\text{В}}_{a\ 3} + 0.02 = 0,002 \times 1,13~\mathrm{\text{мА}} + 0,02 = 0,02~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-2\text{В}}_{a\ 4} = 0.002 I^{-2\text{В}}_{a\ 4} + 0.02 = 0,002 \times 1,90~\mathrm{\text{мА}} + 0,02 = 0,02~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-2\text{В}}_{a\ 5} = 0.002 I^{-2\text{В}}_{a\ 5} + 0.02 = 0,002 \times 2,81~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-2\text{В}}_{a\ 6} = 0.002 I^{-2\text{В}}_{a\ 6} + 0.02 = 0,002 \times 3,82~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-2\text{В}}_{a\ 7} = 0.002 I^{-2\text{В}}_{a\ 7} + 0.02 = 0,002 \times 4,92~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-2\text{В}}_{a\ 8} = 0.002 I^{-2\text{В}}_{a\ 8} + 0.02 = 0,002 \times 6,18~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-2\text{В}}_{a\ 9} = 0.002 I^{-2\text{В}}_{a\ 9} + 0.02 = 0,002 \times 7,46~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \] 
+	\[ \Delta I^{-2\text{В}}_{a\ 10} = 0.002 I^{-2\text{В}}_{a\ 10} + 0.02 = 0,002 \times 8,77~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-2\text{В}}_{a\ 11} = 0.002 I^{-2\text{В}}_{a\ 11} + 0.02 = 0,002 \times 10,16~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+	\[ \Delta I^{-2\text{В}}_{a\ 12} = 0.002 I^{-2\text{В}}_{a\ 12} + 0.02 = 0,002 \times 11,65~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+\end{multicols}
+\begin{multicols}{2}
+	\noindent
+	\[ \Delta I^{0\text{В}}_{a\ 1} = 0.002 I^{0\text{В}}_{a\ 1} + 0.02 = 0,002 \times 1,39~\mathrm{\text{мА}} + 0,02 = 0,02~\mathrm{\text{мА}} \]
+	\[ \Delta I^{0\text{В}}_{a\ 2} = 0.002 I^{0\text{В}}_{a\ 2} + 0.02 = 0,002 \times 2,35~\mathrm{\text{мА}} + 0,02 = 0,02~\mathrm{\text{мА}} \]
+	\[ \Delta I^{0\text{В}}_{a\ 3} = 0.002 I^{0\text{В}}_{a\ 3} + 0.02 = 0,002 \times 3,39~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{0\text{В}}_{a\ 4} = 0.002 I^{0\text{В}}_{a\ 4} + 0.02 = 0,002 \times 4,50~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{0\text{В}}_{a\ 5} = 0.002 I^{0\text{В}}_{a\ 5} + 0.02 = 0,002 \times 5,77~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{0\text{В}}_{a\ 6} = 0.002 I^{0\text{В}}_{a\ 6} + 0.02 = 0,002 \times 6,97~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{0\text{В}}_{a\ 7} = 0.002 I^{0\text{В}}_{a\ 7} + 0.02 = 0,002 \times 8,33~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+	\[ \Delta I^{0\text{В}}_{a\ 8} = 0.002 I^{0\text{В}}_{a\ 8} + 0.02 = 0,002 \times 9,72~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+	\[ \Delta I^{0\text{В}}_{a\ 9} = 0.002 I^{0\text{В}}_{a\ 9} + 0.02 = 0,002 \times 11,19~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]  
+	\[ \Delta I^{0\text{В}}_{a\ 10} = 0.002 I^{0\text{В}}_{a\ 10} + 0.02 = 0,002 \times 12,73~\mathrm{\text{мА}} + 0,02 = 0,05~\mathrm{\text{мА}} \]
+	\[ \Delta I^{0\text{В}}_{a\ 11} = 0.002 I^{0\text{В}}_{a\ 11} + 0.02 = 0,002 \times 14,32~\mathrm{\text{мА}} + 0,02 = 0,05~\mathrm{\text{мА}} \]
+	\[ \Delta I^{0\text{В}}_{a\ 12} = 0.002 I^{0\text{В}}_{a\ 12} + 0.02 = 0,002 \times 15,45~\mathrm{\text{мА}} + 0,02 = 0,05~\mathrm{\text{мА}} \]
+	\[ \Delta I^{0\text{В}}_{a\ 13} = 0.002 I^{0\text{В}}_{a\ 13} + 0.02 = 0,002 \times 17,60~\mathrm{\text{мА}} + 0,02 = 0,06~\mathrm{\text{мА}} \]
+\end{multicols}
+\begin{multicols}{2}
+	\noindent
+	\[ \Delta I^{2\text{В}}_{a\ 1} = 0.002 I^{2\text{В}}_{a\ 1} + 0.02 = 0,002 \times 4,67~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{2\text{В}}_{a\ 2} = 0.002 I^{2\text{В}}_{a\ 2} + 0.02 = 0,002 \times 6,01~\mathrm{\text{мА}} + 0,02 = 0,03~\mathrm{\text{мА}} \]
+	\[ \Delta I^{2\text{В}}_{a\ 3} = 0.002 I^{2\text{В}}_{a\ 3} + 0.02 = 0,002 \times 7,50~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+	\[ \Delta I^{2\text{В}}_{a\ 4} = 0.002 I^{2\text{В}}_{a\ 4} + 0.02 = 0,002 \times 8,97~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+	\[ \Delta I^{2\text{В}}_{a\ 5} = 0.002 I^{2\text{В}}_{a\ 5} + 0.02 = 0,002 \times 10,47~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+	\[ \Delta I^{2\text{В}}_{a\ 6} = 0.002 I^{2\text{В}}_{a\ 6} + 0.02 = 0,002 \times 12,00~\mathrm{\text{мА}} + 0,02 = 0,04~\mathrm{\text{мА}} \]
+	\[ \Delta I^{2\text{В}}_{a\ 7} = 0.002 I^{2\text{В}}_{a\ 7} + 0.02 = 0,002 \times 13,59~\mathrm{\text{мА}} + 0,02 = 0,05~\mathrm{\text{мА}} \]
+	\[ \Delta I^{2\text{В}}_{a\ 8} = 0.002 I^{2\text{В}}_{a\ 8} + 0.02 = 0,002 \times 15,20~\mathrm{\text{мА}} + 0,02 = 0,05~\mathrm{\text{мА}} \]
+	\[ \Delta I^{2\text{В}}_{a\ 9} = 0.002 I^{2\text{В}}_{a\ 9} + 0.02 = 0,002 \times 16,88~\mathrm{\text{мА}} + 0,02 = 0,05~\mathrm{\text{мА}} \]  
+	\[ \Delta I^{2\text{В}}_{a\ 10} = 0.002 I^{2\text{В}}_{a\ 10} + 0.02 = 0,002 \times 18,57~\mathrm{\text{мА}} + 0,02 = 0,06~\mathrm{\text{мА}} \]
+	\[ \Delta I^{2\text{В}}_{a\ 11} = 0.002 I^{2\text{В}}_{a\ 11} + 0.02 = 0,002 \times 20,31~\mathrm{\text{мА}} + 0,02 = 0,06~\mathrm{\text{мА}} \]
 \end{multicols}
 }
