--- a/source/introduction.tex
+++ b/source/introduction.tex
@@ -1,17 +1,41 @@
 \section{Введение}
 \subsection*{Цель} \addcontentsline{toc}{subsection}{Цель}
-1
+Исследовать устройство электронных ламп диода и триода.
 
 \subsection*{Задачи} \addcontentsline{toc}{subsection}{Задачи}
 \begin{enumerate}
-	\item Внимательно ознакомиться с экспериментальной установкой;
-	
+	\item \textit{Снятие статической характеристики диода}:
+	\begin{enumerate}
+		\item Меняя величину $U_a$ для каждого ее конкретного значения считывать величину $I_a$; 
+		\item По полученным данным построить соответствующую характеристику и вычислить крутизну в нескольких точках характеристики.
+	\end{enumerate}
+	\item \textit{Снятие статических характеристик триода}:
+	\begin{enumerate}
+		\item Начертить график гиперболы $P_{a}^{max} = U_a I_a = const$, чтобы при снятии характеристик рассеиваемая мощность не превышала предельную допустимую для данной лампы;
+		\item Снять семейство анодных характеристик при нескольких значениях сеточного напряжения;
+		\item Снять семейство сеточных характеристик при различных анодных напряжениях, изменяя $U_c$, чтобы лампа запиралась в одном положении и анодный ток был ниже максимально допустимого в другом;
+		\item Для средних участков характеристик вычислить параметры $S$, $R_i$, $\mu$.
+	\end{enumerate}
+	\item \textit{Определение коэффициента усиления усилителя}:
+	\begin{enumerate}
+		\item Подать на вход осциллографа сигнал с выхода генератора ГЗ-112 с частотой $f \sim 1~\text{кГц}$ и амплитудой $\sim 100~\text{мВ}$;
+		\item Вычислить величину
+		\begin{equation} \label{eq:task:1}
+			K = \frac{\mu}{1 + \frac{R_i}{R_a}},
+		\end{equation}
+		определив по осциллограмме амплитуду выходного сигнала;
+		\item Проверить частотные свойства усилителя. Снять зависимость коэффициента усиления от частоты. Определить частоту, на которой коэффициент усиления уменьшается в 2 раза;
+		\item Вычислить $K$ для всех возможных значений сопротивления $R_a$. Проверить, выполняется ли соотношение \cref{eq:task:1}. Если указанное соотношение не выполняется, то объясните, чем это может быть вызвано.
+	\end{enumerate}
 \end{enumerate}
 
 \subsection*{Приборы и оборудование} \addcontentsline{toc}{subsection}{Приборы и оборудование}
 
 \begin{enumerate}
-	\item Источник питания постоянного тока Б5-50;
-	\item Вольтметр универсальный GDM-8245;
-	\item Генератор низкочастотных сигналов ГЗ-112;
+	\item Источник питания постоянного тока \texttt{Б5-50};
+	\item Вольтметр универсальный \texttt{GDM-8245};
+	\item Генератор низкочастотных сигналов \texttt{ГЗ-112};
+	\item Провода;
+	\item Осциллограф цифровой \texttt{GDS-71022};
+	\item Диод и триод.
 \end{enumerate}
