--- a/source/practice.tex
+++ b/source/practice.tex
@@ -1,450 +1,119 @@
 \section{Практическая часть}
 \subsection{Исследование лампы диода}
-\subsubsection{Снятие статической характеристики диода}
-\begin{table}[H]
-	\centering
-	\caption{Вольт-амперная характеристика (ВАХ) диода и результаты вычислений погрешностей и крутизны}
-	\label{tab:1}
-	\begin{subtable}{0.3\textwidth}
-		\centering
-		\caption{ }
-		\label{tab:1a}
-		\begin{tabular}{cc}
-			\toprule
-			\(U_a, \text{ В}\) & \(I_a, \text{ мА}\) \\ \midrule
-			2          &        3,78         \\
-			4          &        10,16        \\
-			6          &        16,88        \\
-			8          &        24,84        \\
-			10         &        32,40        \\
-			12         &        40,90        \\
-			14         &        49,94        \\
-			16         &        62,40        \\
-			18         &        73,52        \\
-			20         &        86,31        \\ \bottomrule
-		\end{tabular}
-	\end{subtable}
-	\begin{subtable}{0.45\textwidth}
-		\centering
-		\caption{ }
-		\label{tab:1b}
-		\begin{tabular}{cccc}
-			\toprule
-			\(\Delta U_a, \text{ В}\) & \(\Delta I_a, \text{ мА}\) & \(S, \tfrac{\text{мА}}{\text{В}}\) & \(\Delta S, \tfrac{\text{мА}}{\text{В}}\) \\ \midrule
-			0,31            &            0,03            &                 --                 &                    --                     \\
-			0,32            &            0,04            &                3,19                &                   0,71                    \\
-			0,33            &            0,05            &                3,36                &                   0,77                    \\
-			0,34            &            0,07            &                3,98                &                   0,94                    \\
-			0,35            &            0,08            &                3,78                &                   0,92                    \\
-			0,36            &            0,10            &                4,25                &                   1,07                    \\
-			0,37            &            0,12            &                4,52                &                   1,17                    \\
-			0,38            &            0,14            &                6,23                &                   1,65                    \\
-			0,39            &            0,17            &                5,56                &                   1,52                    \\
-			0,40            &            0,19            &                6,40                &                   1,79                    \\ \bottomrule
-		\end{tabular}
-	\end{subtable}
-\end{table}
+% Снятие статической характеристики диода +
+\input{source/practice/1_triode_parameters}
 
-В ходе лабораторного эксперимента проведено снятие статической вольт-амперной характеристики полупроводникового диода. Результаты экспериментальных измерений зависимости анодного тока \(I_a\) от анодного напряжения \(U_a\) представлены в \cref{tab:1a}.
-
-Дифференциальная крутизна вольт-амперной характеристики \(S\) рассчитана в соответствии с уравнением \cref{eq:2} (см. \cref{app:1}) и занесена в \cref{tab:1b}. Проведенный анализ полученных данных демонстрирует нелинейный характер возрастания крутизны характеристики при увеличении анодного напряжения.
-
-Погрешности измерений анодного напряжения \(\Delta U_a\) и анодного тока \(\Delta I_a\) приняты равными приборным погрешностям и вычислены согласно уравнениям \cref{eq:error:1.2,eq:error:2.1} (см. \cref{app:2,app:3}). Погрешность определения крутизны \(\Delta S\) рассчитана по формуле \cref{eq:error:3.2} (см. \cref{app:4}).
-
-Определим среднеарифметическое значение крутизны вольт-амперной характеристики:
-\begin{gather} 
-	S_\text{ср} = \tfrac{3,19 + 3,36 + 3,98 + 3,78 + 4,25 + 4,52 + 6,23 + 5,56 + 6,40}{9}~\tfrac{\text{мА}}{\text{В}} \approx 4,59~\tfrac{\text{мА}}{\text{В}}\\
-	\Delta S_\text{ср} = \tfrac{0,71 + 0,77 + 0,94, + 0,92 + 1,07 + 1,17 + 1,65 + 1,52 + 1,79}{9}~\tfrac{\text{мА}}{\text{В}} \approx 1,17~\tfrac{\text{мА}}{\text{В}}
-\end{gather} 
-\[S_\text{ср} = (4,59 \pm 1,17)~\tfrac{\text{мА}}{\text{В}}\]
-
-На \cref{fig:1} представлен график зависимости \(I_a(U_a)\) с нанесенными экспериментальными точками и областями погрешностей измерений. Теоретическая кривая построена в соответствии с уравнением \cref{eq:52}, из анализа которого определен параметр \(B\) (см. \cref{app:5}):
-\[B = (0,97 \pm 0,05)~\frac{\text{мА}}{\text{В}^{3/2}}\]
-
-Сравнение экспериментальных данных с теоретической зависимостью показывает их удовлетворительное согласование в исследованном диапазоне напряжений, что подтверждает адекватность примененной теоретической модели.
-
-\begin{figure}[p]
-	\centering
-	\begin{tikzpicture}
-		\begin{axis}[
-			width=13cm,
-			height=10.5cm,
-			xlabel={$U_a$, В},
-			ylabel={$I_a$, мА},
-			xmin=0, xmax=22,
-			ymin=0, ymax=90,
-			grid=both,
-			minor tick num=9, % 4 милимтровых деления между основными
-			minor grid style={gray!15, very thin},
-			grid style={black!50, thin},
-			major grid style={black!70, thin},
-			major tick length=2pt,
-			minor tick length=1pt,
-			axis lines=left,
-			axis line style={-stealth, thick, black},
-			tick style={black, thick},
-			xmajorgrids=true,
-			ymajorgrids=true,
-			xminorgrids=true,
-			yminorgrids=true,
-			xtick={0,2,4,...,22},
-			ytick={0,10,20,...,90},
-			scale only axis
-			]
-			
-			% Данные точек
-			\addplot[only marks, mark=*, mark size=2pt, color=blue] coordinates {
-				(2, 3.78) (4, 10.16) (6, 16.88) (8, 24.84) (10, 32.40)
-				(12, 40.90) (14, 49.94) (16, 62.40) (18, 73.52) (20, 86.31)
-			};
-			
-			\addplot[domain=0:22, samples=100, thick, red]{0.97*x^1.5};
-			
-			% Прямоугольники погрешностей
-			\draw[gray, fill=gray!20, opacity=0.5] (1.69, 3.75) rectangle (2.31, 3.81);
-			\draw[gray, fill=gray!20, opacity=0.5] (3.68, 10.12) rectangle (4.32, 10.20);
-			\draw[gray, fill=gray!20, opacity=0.5] (5.67, 16.83) rectangle (6.33, 16.93);
-			\draw[gray, fill=gray!20, opacity=0.5] (7.66, 24.77) rectangle (8.34, 24.91);
-			\draw[gray, fill=gray!20, opacity=0.5] (9.65, 32.32) rectangle (10.35, 32.48);
-			\draw[gray, fill=gray!20, opacity=0.5] (11.64, 40.80) rectangle (12.36, 41.00);
-			\draw[gray, fill=gray!20, opacity=0.5] (13.63, 49.82) rectangle (14.37, 50.06);
-			\draw[gray, fill=gray!20, opacity=0.5] (15.62, 62.26) rectangle (16.38, 62.54);
-			\draw[gray, fill=gray!20, opacity=0.5] (17.61, 73.35) rectangle (18.39, 73.69);
-			\draw[gray, fill=gray!20, opacity=0.5] (19.60, 86.12) rectangle (20.40, 86.50);
-			
-z		\end{axis}
-	\end{tikzpicture}
-	\caption{Вольт-амперная характеристика диода с погрешностями измерений и теоретической линией}
-	\label{fig:1}
-\end{figure}
-\begin{figure}[p]
-	\centering
-	\begin{tikzpicture}
-		\begin{axis}[
-			width=13cm,
-			height=10.5cm,
-			xlabel={$U_a$, В},
-			ylabel={$I_a$, мА},
-			xmin=0, xmax=240,
-			ymin=0, ymax=250,
-			minor tick num=9, 
-			minor grid style={gray!15, very thin},
-			grid=both,
-			grid style={black!50, thin},
-			major grid style={black!70, thin},
-			major tick length=2pt,
-			minor tick length=1pt,
-			axis lines=left,
-			axis line style={-stealth, thick, black},
-			tick style={black, thick},
-			xmajorgrids=true,
-			ymajorgrids=true,
-			xminorgrids=true,
-			yminorgrids=true,
-			xtick={0,20,40,...,240},
-			ytick={0,20,40,...,250},
-			scale only axis
-			]
-			
-			\addplot[domain=0:240, samples=100, thick, red]{2.5/x*1000};
-			
-			
-		\end{axis}
-	\end{tikzpicture}
-	\caption{Кривая максимально допустимого тока}
-	\label{fig:2}
-\end{figure}
-
+\newpage
 \subsection{Исследование лампы триода}
-\subsubsection{Расчет предельной мощности (\Cref{fig:2})}
 
-В соответствии с максимальной рассеиваемой мощностью лампы рассчитали максимально допустимый ток для $U_a \in [10:240]~\text{В}$.
-\[P_{max} = U_a  I_a = \mathrm{const} = 2,5~\text{Вт}\]
-\begin{equation} \label{eq:3}
-	I_a^{max} = \frac{P_{max}}{U_a} = \frac{2,5}{U_a}
-\end{equation}
+% Расчет предельной мощности + 
+\input{source/practice/2_max_power_calculation}
+\newpage
 
-\begin{table}[H]
-	\centering
-	\caption{Максимальный допустимый ток}
-	\label{tab:max_current}
-	\begin{tabular}{*{4}{S[table-format=3.0] S[table-format=3.2]}}
-		\toprule
-		{$U_a$, В} & {$I_a$, мА} & {$U_a$, В} & {$I_a$, мА} & 
-		{$U_a$, В} & {$I_a$, мА} & {$U_a$, В} & {$I_a$, мА} \\
-		\midrule
-		10 & 250,00 &  70 &  35,71 & 130 &  19,23 & 190 &  13,16 \\
-		20 & 125,00 &  80 &  31,25 & 140 &  17,86 & 200 &  12,50 \\
-		30 &  83,33 &  90 &  27,78 & 150 &  16,67 & 210 &  11,90 \\
-		40 &  62,50 & 100 &  25,00 & 160 &  15,63 & 220 &  11,36 \\
-		50 &  50,00 & 110 &  22,73 & 170 &  14,71 & 230 &  10,87 \\
-		60 &  41,67 & 120 &  20,83 & 180 &  13,89 & 240 &  10,42 \\
-		\bottomrule
-	\end{tabular}
-\end{table}
+% Снятие анодной характеристики
+\input{source/practice/3_anode_characteristics}
+\newpage
 
-\begin{table}[h]
-	\centering
-	\caption{Снятие анодной характеристики триода}
-	\label{tab:4}
-	\begin{tabular}{cccccc}
-		\toprule
-		$U_a$, В & $I_a^{-4\text{В} },~\text{мА}$ & $I_a^{ -2\text{В} },~\text{мА}$ & $I_a^{ 0\text{В} },~\text{мА}$ & $I_a^{ 2\text{В} },~\text{мА}$ &  $I_a^{\text{max}}$, мА \\
-		\midrule
-		10     & --           & --           & 1,39        & 4,67        &  250,00         \\
-		20     & --           & --           & 2,35        & 6,01        &  125,00         \\
-		30     & --           & 0,16         & 3,39        & 7,50        &  83,33          \\
-		40     & --           & 0,54         & 4,50        & 8,97        &  62,50          \\
-		50     & --           & 1,13         & 5,77        & 10,47       &  50,00          \\
-		60     & 0,12         & 1,90         & 6,97        & 12,00       &  41,67          \\
-		70     & 0,34         & 2,81         & 8,33        & 13,59       &  35,71          \\
-		80     & 0,72         & 3,82         & 9,72        & 15,20       &  31,25          \\
-		90     & 1,26         & 4,92         & 11,19       & 16,88       &  27,78          \\
-		100    & 1,95         & 6,18         & 12,73       & 18,57       &  25,00          \\
-		110    & 2,77         & 7,46         & 14,32       & 20,31       &  22,73          \\
-		120    & 3,72         & 8,77         & 15,45       & --          &  20,83          \\
-		130    & 4,75         & 10,16        & 17,60       & --          &  19,23          \\
-		140    & 5,93         & 11,65        & --          & --          &  17,86          \\
-		150    & 7,15         & --           & --          & --          &  16,67          \\
-		160    & 8,44         & --           & --          & --          &  15,63          \\
-		170    & 9,84         & --           & --          & --          &  14,71          \\
-		180    & 11,27        & --           & --          & --          &  13,89          \\
-%		190    & --           & --           & --          & --          & --          & 13,16          \\
-%		200    & --           & --           & --          & --          & --          & 12,50          \\
-%		210    & --           & --           & --          & --          & --          & 11,90          \\
-%		220    & --           & --           & --          & --          & --          & 11,36          \\
-%		230    & --           & --           & --          & --          & --          & 10,87          \\
-%		240    & --           & --           & --          & --          & --          & 10,42          \\
-		\bottomrule
-	\end{tabular}
-\end{table}
+% Снятие сеточной характеристики
+\input{source/practice/4_grid_characteristics}
+\newpage
 
-\begin{figure}[p]
-	\centering
-	\begin{tikzpicture}
-		\begin{axis}[
-			width=14cm,
-			height=10cm,
-			xlabel={$U_a$, В},
-			ylabel={$I_a$, мА},
-			xmin=0, xmax=200,
-			ymin=0, ymax=25,
-			grid=both,
-			minor tick num=9, % 4 милимтровых деления между основными
-			minor grid style={gray!15, very thin},
-			grid style={black!50, thin},
-			major grid style={black!70, thin},
-			major tick length=2pt,
-			minor tick length=1pt,
-			axis lines=left,
-			axis line style={-stealth, thick, black},
-			tick style={black, thick},
-			xmajorgrids=true,
-			ymajorgrids=true,
-			xminorgrids=true,
-			yminorgrids=true,
-			xtick={0,20,40,...,200},
-			ytick={0,5,10,...,25},
-			scale only axis
-			]
-			
-			% Данные точек
-			\addplot[only marks, mark=*, mark size=2pt, color=blue] coordinates {
-				(60.0, 0.12) (70.0, 0.34) (80.0, 0.72) (90.0, 1.26) (100.0, 1.95) (110.0, 2.77) (120.0, 3.72) (130.0, 4.75) (140.0, 5.93) (150.0, 7.15) (160.0, 8.44) (170.0, 9.84) (180.0, 11.27) 
-			};
-			
-			\addplot[only marks, mark=*, mark size=2pt, color=red] coordinates {
-				(30.0, 0.16) (40.0, 0.54) (50.0, 1.13) (60.0, 1.9) (70.0, 2.81) (80.0, 3.82) (90.0, 4.92) (100.0, 6.18) (110.0, 7.46) (120.0, 8.77) (130.0, 10.16) (140.0, 11.65) 
-			};
-			
-			\addplot[only marks, mark=*, mark size=2pt, color=black] coordinates {
-				(0.0, 0.14) (10.0, 1.39) (20.0, 2.35) (30.0, 3.39) (40.0, 4.5) (50.0, 5.77) (60.0, 6.97) (70.0, 8.33) (80.0, 9.72) (90.0, 11.19) (100.0, 12.73) (110.0, 14.32) (120.0, 15.45) (130.0, 17.6) 
-			};
-			
-			\addplot[only marks, mark=*, mark size=2pt, color=orange] coordinates {
-				(0.0, 0.13) (10.0, 4.67) (20.0, 6.01) (30.0, 7.5) (40.0, 8.97) (50.0, 10.47) (60.0, 12.0) (70.0, 13.59) (80.0, 15.2) (90.0, 16.88) (100.0, 18.57) (110.0, 20.31)  
-			};
-			
-%			\addplot[domain=0:22, samples=100, thick, red]{0.97*x^1.5};
-			
-			% Прямоугольники погрешностей
-%			\draw[gray, fill=gray!20, opacity=0.5] (1.69, 3.75) rectangle (2.31, 3.81);
-%			\draw[gray, fill=gray!20, opacity=0.5] (3.68, 10.12) rectangle (4.32, 10.20);
-%			\draw[gray, fill=gray!20, opacity=0.5] (5.67, 16.83) rectangle (6.33, 16.93);
-%			\draw[gray, fill=gray!20, opacity=0.5] (7.66, 24.77) rectangle (8.34, 24.91);
-%			\draw[gray, fill=gray!20, opacity=0.5] (9.65, 32.32) rectangle (10.35, 32.48);
-%			\draw[gray, fill=gray!20, opacity=0.5] (11.64, 40.80) rectangle (12.36, 41.00);
-%			\draw[gray, fill=gray!20, opacity=0.5] (13.63, 49.82) rectangle (14.37, 50.06);
-%			\draw[gray, fill=gray!20, opacity=0.5] (15.62, 62.26) rectangle (16.38, 62.54);
-%			\draw[gray, fill=gray!20, opacity=0.5] (17.61, 73.35) rectangle (18.39, 73.69);
-%			\draw[gray, fill=gray!20, opacity=0.5] (19.60, 86.12) rectangle (20.40, 86.50);
-			
-		\end{axis}
-	\end{tikzpicture}
-	\caption{Анодная характеристика триода}
-	\label{fig:3}
-\end{figure}
+% Изучение АЧХ усилителя
+\input{source/practice/5_amplifier_frequency_response_measurement}
+                                                               
 
-\subsubsection{Изучение АЧХ усилителя}
-
-Подав на вход усилителя сигнал амплитудой $U_\text{вх} = 100~\text{мВ}$ с генератора ГЗ-112, изменяя частоту, сняли зависимость выходной амплитуды от частоты (АЧХ) и рассчитали коэффициент усиления для каждого значения частоты по формуле \cref{eq:pr:1} (см. \cref{app:6}).
-\begin{equation} \label{eq:pr:1}
-	K = \frac{2 U_\text{вых}}{2 U_\text{вх}} = \frac{2 U_\text{вых}}{2 \cdot 100~\text{мВ}} = \frac{2 U_\text{вых}}{0,2~\text{В}}
-\end{equation}
-
-\begin{table}[H]
-	\centering
-	\caption{Снятие амплитудно-частотной характеристики усилителя}
-	\label{tab:5}
-	\begin{tabular}{ccccc}
-		\toprule
-		$\nu_\text{уст},~\text{Гц}$ & Множитель & $\nu,~\text{кГц}$ & $2U_\text{вых},~\text{В}$ & $K$ \\
-		\midrule
-		10 & $10^2$ & 1 & 0,360 & 1,80 \\
-		20 & $10^3$ & 20 & 0,352 & 1,76 \\
-		40 & $10^3$ & 40 & 0,356 & 1,78 \\
-		50 & $10^3$ & 50 & 0,348 & 1,74 \\
-		70 & $10^3$ & 70 & 0,352 & 1,76 \\
-		90 & $10^3$ & 90 & 0,352 & 1,76 \\
-		12 & $10^4$ & 120 & 0,352 & 1,76 \\
-		14 & $10^4$ & 140 & 0,352 & 1,76 \\
-		18 & $10^4$ & 180 & 0,344 & 1,72 \\
-		23 & $10^4$ & 230 & 0,344 & 1,72 \\
-		27 & $10^4$ & 270 & 0,336 & 1,68 \\
-		50 & $10^4$ & 500 & 0,308 & 1,54 \\
-		60 & $10^4$ & 600 & 0,288 & 1,44 \\
-		70 & $10^4$ & 700 & 0,272 & 1,36 \\
-		80 & $10^4$ & 800 & 0,254 & 1,27 \\
-		90 & $10^4$ & 900 & 0,240 & 1,20 \\
-		\bottomrule
-	\end{tabular}
-	\begin{tabular}{cc}
-		\toprule
-		$\Delta \nu,~\text{кГц}$ & $\Delta K$\\
-		\midrule
-		0,1 &  	\\
-		0,7 &  	\\
-		1,1 &  	\\
-		1,3 &  	\\
-		1,7 &  	\\
-		2,1 &  	\\
-		5,4 &  	\\
-		5,8 &  	\\
-		6,6 &  	\\
-		7,6 &  	\\
-		8,4 &  	\\
-		13,0 & 	\\
-		15,0 & 	\\
-		17,0 & 	\\
-		19,0 & 	\\
-		21,0 & 	\\
-		\bottomrule
-	\end{tabular}
-\end{table}
-
-\subsubsection{Зависимость усиления от сопротивления на нагрузки}
+%\subsubsection{Зависимость усиления от сопротивления на нагрузки}
 
 
-\subsubsection{Снятие сеточной характеристики}
-
-Были сняты 3 анодно-сеточных характеристик для разных напряжений на аноде: 60, 80, 100 В (см. \cref{tab:6}).
-\begin{table}[H]
-	\centering
-	\caption{Анодно-сеточная характеристика триода}
-	\label{tab:6}
-	\begin{subtable}{0.3\textwidth}
-		\centering
-		\caption{\(U_a = 60~\text{В}\)}
-		\label{tab:6a}
-		\begin{tabular}{cc}
-			\toprule
-			$U_c,~\text{В}$ & $I_a,~\text{мА}$ \\ \midrule
-			--      & --       \\
-			--      & --       \\
-			--      & --       \\
-			--      & --       \\
-			--      & --       \\
-			-3,16   & 0,50     \\
-			-2,38   & 1,31     \\
-			-2,04   & 1,85     \\
-			-1,54   & 2,78     \\
-			-1,09   & 3,76     \\
-			-0,55   & 5,16     \\
-			0,08    & 6,80     \\
-			0,52    & 7,90     \\
-			1,02    & 9,16     \\
-			1,57    & 10,60    \\
-			2,04    & 11,85    \\
-			2,54    & 13,21    \\
-			3,04    & 14,62    \\
-			3,57    & 16,15    \\
-			4,08    & 17,70    \\
-			4,47    & 18,90   \\
-			\bottomrule
-		\end{tabular}
-	\end{subtable}
-	\begin{subtable}{0.3\textwidth}
-		\centering
-		\caption{\(U_a = 80~\text{В}\)}
-		\label{tab:6b}
-		\begin{tabular}{cc}
-			\toprule
-			$U_c,~\text{В}$ & $I_a,~\text{мА}$ \\ \midrule
-			--      & --       \\
-			--      & --       \\
-			-4,53   & 0,37     \\
-			-4,00   & 0,73     \\
-			-3,52   & 1,20     \\
-			-3,08   & 1,78     \\
-			-2,50   & 2,78     \\
-			-2,00   & 3,80     \\
-			-1,54   & 4,96     \\
-			-0,95   & 6,40     \\
-			-0,57   & 7,60     \\
-			0,06    & 9,50     \\
-			0,52    & 10,78    \\
-			0,98    & 12,12    \\
-			1,50    & 13,49    \\
-			2,13    & 15,34    \\
-			2,53    & 16,52    \\
-			2,99    & 17,92    \\
-			3,50    & 19,51    \\
-			4,02    & 21,17    \\
-			4,51    & 22,75   \\
-			\bottomrule
-		\end{tabular}
-	\end{subtable}
-	\begin{subtable}{0.3\textwidth}
-		\centering
-		\caption{\(U_a = 100~\text{В}\)}
-		\label{tab:6c}
-		\begin{tabular}{cc}
-			\toprule
-			$U_c,~\text{В}$ & $I_a,~\text{мА}$ \\ \midrule
-			-5,55   & 0,53     \\
-			-4,97   & 0,87     \\
-			-4,54   & 1,28     \\
-			-4,03   & 1,92     \\
-			-3,50   & 2,78     \\
-			-3,10   & 3,55     \\
-			-2,53   & 4,78     \\
-			-2,04   & 6,09     \\
-			-1,50   & 7,56     \\
-			-1,05   & 8,90     \\
-			-0,55   & 10,48    \\
-			0,11    & 12,62    \\
-			0,51    & 13,85    \\
-			1,07    & 15,54    \\
-			1,48    & 16,77    \\
-			2,09    & 18,66    \\
-			2,55    & 20,13    \\
-			3,07    & 21,83    \\
-			3,52    & 23,26    \\
-			--      & --       \\
-			--      & --      \\
-			\bottomrule
-		\end{tabular}
-	\end{subtable}
-\end{table}
- 
-Для каждой из характеристик подсчитали коэффициент крутизны $S$ на линейном участке графика.
+% 
+%%Для каждой из характеристик подсчитали коэффициент крутизны $S$ на линейном участке графика.
+%
+%%\begin{table}{p}
+%%	\centering
+%%	\caption{Зависимость $K$ от частоты $\nu$, при $R_a = 50~\text{кОм}$}
+%%	\label{tab:7}
+%%	\begin{tabular}{cc}
+%%		\toprule
+%%		$\nu,~\text{кГц}$ & $2U_\text{вых},~\text{В}$ \\ 
+%%		\midrule
+%%	\end{tabular}
+%%\end{table}
+%
+%\begin{table}[p]
+%	\centering
+%	\caption{Зависимость $K$ от сопротивления нагрузки $R_a$ при частоте $\nu=1~\text{кГц}$}
+%	\label{tab:7}
+%	\begin{tabular}{ccc}
+%		\toprule
+%		$R,~\text{кОм}$ & $2U_\text{вых},~\text{В}$ & $K$  \\ \midrule
+%		0,5             & 0,182                     & 0,9  \\
+%		1,0             & 0,348                     & 1,7  \\
+%		2,0             & 0,640                     & 3,2  \\
+%		5,0             & 1,230                     & 6,2  \\
+%		10,0            & 1,900                     & 9,5  \\
+%		20,0            & 2,540                     & 12,7 \\
+%		50,0            & 3,200                     & 16,0 \\
+%		100,0           & 3,560                     & 17,8 \\
+%		200,0           & 3,720                     & 18,6 \\
+%		500,0           & 3,600                     & 18,0 \\
+%		1000,0          & 3,360                     & 16,8 \\
+%		\bottomrule
+%	\end{tabular}
+%\end{table}
+%
+%\begin{table}[p]
+%	\centering
+%	\caption{Зависимость $K$ от частоты $\nu$ ($U_a = 100~\text{В}$)}
+%	\label{tab:8}
+%	\begin{subtable}{0.45\textwidth}
+%		\centering
+%		\caption{$R=1~\text{кОм}$}
+%		\label{tab:8a}
+%		\begin{tabular}{ccc}
+%			\toprule
+%			$\nu,~\text{кГц}$ & $2U_\text{вых},~\text{В}$ & $K$  \\\midrule
+%			1                 & 0,360                     & 1,80 \\
+%			20                & 0,352                     & 1,76 \\
+%			40                & 0,356                     & 1,78 \\
+%			50                & 0,348                     & 1,74 \\
+%			70                & 0,352                     & 1,76 \\
+%			90                & 0,352                     & 1,76 \\
+%			120               & 0,352                     & 1,76 \\
+%			140               & 0,352                     & 1,76 \\
+%			180               & 0,344                     & 1,72 \\
+%			230               & 0,344                     & 1,72 \\
+%			270               & 0,336                     & 1,68 \\
+%			500               & 0,308                     & 1,54 \\
+%			600               & 0,288                     & 1,44 \\
+%			700               & 0,272                     & 1,36 \\
+%			800               & 0,254                     & 1,27 \\
+%			900               & 0,240                     & 1,20 \\ \bottomrule
+%		\end{tabular}
+%	\end{subtable}
+%	\begin{subtable}{0.45\linewidth}
+%		\centering
+%		\caption{$R=50~\text{кОм}$}
+%		\label{tab:8b}
+%		\begin{tabular}{ccc}
+%			\toprule
+%			$\nu,~\text{кГц}$ & $2U_\text{вых},~\text{В}$ & $K$   \\ \midrule
+%			1                 & 3,240                     & 16,20 \\
+%			20                & 3,140                     & 15,70 \\
+%			40                & 2,840                     & 14,20 \\
+%			50                & 2,640                     & 13,20 \\
+%			70                & 2,340                     & 11,70 \\
+%			90                & 2,000                     & 10,00 \\
+%			120               & 1,680                     & 8,40  \\
+%			140               & 1,480                     & 7,40  \\
+%			180               & 1,200                     & 6,00  \\
+%			230               & 0,984                     & 4,92  \\
+%			270               & 0,848                     & 4,24  \\
+%			500               & 0,464                     & 2,32  \\
+%			600               & 0,388                     & 1,94  \\
+%			700               & 0,336                     & 1,68  \\
+%			800               & 0,288                     & 1,44  \\
+%			900               & 0,260                     & 1,30 \\
+%			\bottomrule
+%		\end{tabular}
+%	\end{subtable}
+%\end{table}
