--- a/source/questions.tex
+++ b/source/questions.tex
@@ -12,14 +12,23 @@
 	\label{fig:question:1}
 	\begin{tikzpicture}
 		\begin{axis}[
+			width=10cm,    % ширина
+			height=8cm,   % высота
+			scale only axis,
 			domain=0:1.2, 
-			xlabel={$U_a$, В},
-			ylabel={$I_a$, мА},
 			xtick={10,12},
 			ytick={10,12},
+			hide axis,
 			legend pos = north west
 			]
-			\addplot[solid, draw = red]{1/(1 + e^(-10 * (x-0.8)))};
+			\draw[->,very thick] (0,0) -- (0,1) node[below right] {{\small $I_a$, мА}};
+			\draw[->,very thick] (0,0) -- (1.3,0) node[above left] {{\small $U_a$, В}};
+			
+			\node[draw, circle, thick, fill=white, minimum size=8mm] at (axis cs:0.25,0.12) {1};
+			\node[draw, circle, thick, fill=white, minimum size=8mm] at (axis cs:0.9,0.35) {2};
+			\node[draw, circle, thick, fill=white, minimum size=8mm] at (axis cs:0.85,0.9) {3};
+			
+			\addplot[solid, draw = red, thick, samples=100]{1/(1 + e^(-10 * (x-0.8)))+0.005};
 		\end{axis}
 	\end{tikzpicture}
 	\caption{Качественный графика хода анодной характеристики диода}
