--- a/source/conclusion.tex
+++ b/source/conclusion.tex
@@ -1,3 +1,3 @@
 \section{Вывод}
 
-Вывод к лабораторной работе
+Мы изучили принцип работы простейших электронных ламп – диода и триода, нашли их основные характеристики. Вывели закон 3/2, изучили работу лампы триода в режиме усилителя, сняли его АЧХ, сеточную характеристику. Нашли погрешность наших измерений.
