--- a/source/practice.tex
+++ b/source/practice.tex
@@ -342,7 +342,7 @@ z		\end{axis}
 	\end{tabular}
 \end{table}
 
-\subsubsection{Зависимость усиления от сопротивления на нагрузки}
+\subsubsection{Зависимость усиления от сопротивления нагрузки}
 
 
 \subsubsection{Снятие сеточной характеристики}
